--- a/dys.html
+++ b/dys.html
@@ -15,10 +15,17 @@
 
 <script type="text/javascript">
   function popup() {
-    window.alert("Exxon Mobile, a top contributor to greenhouse gas emissions since 1988, continues to pollute the planet.")
+    window.alert("Exxon Mobile, a top contributor to greenhouse gas emissions since 1988, has long has enjoyed a close relationship with Congress using their influence to run operations on federal land further destroying the environment. They made billions of dollars, but at what cost?")
   }
   </script>
 
+	<script type="text/javascript">
+	  function popup2() {
+	    window.alert("The oil industry knew about Climate Change since the 80s but companies like Exxon Mobile advocated for Climate Change deniers and continued to pollute the planet to the point of no return.")
+	  }
+	  </script>
+
+<div id="pulse-a" class="pulse-ring" onclick="popup2()"></div>
 
 <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -87,7 +94,7 @@
 <rect id="XMLID_29_" x="400.753" y="175.111" style="fill:#FFFFFF;stroke:#FFFFFF;stroke-miterlimit:10;" width="21.067" height="13.93"/>
 </svg>
 
-<audio controls autoplay>
+<audio loop controls autoplay>
 	<source src="./img/water.wav" type="audio/mpeg">
 </audio>
 
