--- a/drought.html
+++ b/drought.html
@@ -19,7 +19,13 @@
 			}
 		</script>
 	</head>
+	<video autoplay muted loop id="myVideo">
+   		<source src="./img/Drought.mp4" type="video/mp4">
+ 	</video>
 	<body>
+		<audio loop controls autoplay>
+	<source src="./img/drought.wav" type="audio/wav">
+</audio>
 <!-- 		pulse code taken from https://stackoverflow.com/questions/34653532/pulsating-image-rings-css-animations-->			
 		<div onclick="reveal1()" id="pulse-1" class="pulse-ring"></div>
 		
