--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 
 			
-		<audio controls autoplay>
-		  <source src="./img/sound1.wav" type="audio/mpeg">
+		<audio autoplay="autoplay" controls="controls">
+		  <source src="./img/sound1.mp3">
 		</audio>
 
 	</body>
