--- a/oil.html
+++ b/oil.html
@@ -35,6 +35,9 @@
 		  }
 		  </script>
 
+      <a href="help.html"><div class="next">NEXT</div></a>
+    <a href="dys.html"><div class="back">BACK</div></a>
+
 <div id="pulse-x" class="pulse-ring" onclick="popup()"></div>
 
 <div id="pulse-y" class="pulse-ring" onclick="popup2()"></div>
@@ -65,5 +68,4 @@ function myFunction() {
 }
 </script>
 
-	<body>
 </html>
