--- a/dys.html
+++ b/dys.html
@@ -24,7 +24,8 @@
 	    window.alert("The oil industry knew about Climate Change since the 80s but companies like Exxon Mobile advocated for Climate Change deniers and continued to pollute the planet to the point of no return.")
 	  }
 	  </script>
-
+<a href="oil.html"><div class="next">NEXT</div></a>
+		<a href="extinct.html"><div class="back">BACK</div></a>
 <div id="pulse-a" class="pulse-ring" onclick="popup2()"></div>
 
 <?xml version="1.0" encoding="iso-8859-1"?>
