--- a/graph1.html
+++ b/graph1.html
@@ -1809,17 +1809,19 @@
 
 	<div id="gas-highlight">
 		<b>GAS</b> <br>
-		"Fossil fuels are the largest source of anthropogenic greenhouse gas emissions in the world. The fossil fuel industry and its products accounted for 91% of global industrial GHGs in 2015, and about 70% of all anthropogenic GHG emissions"
+		Fossil fuels are the largest source of man-made greenhouse gas emissions on Earth. 91% of GHG emissions in 2015 were from the fossil fuel industry.
 		<img class="supimg" src="https://www.elp.com/content/elp/en/articles/2017/12/state-board-approves-plans-for-natural-gas-plant-near-toledo/_jcr_content/leftcolumn/article/thumbnailimage.img.jpg">
 	</div>
 	<div id="liquid-highlight">
 		<b>LIQUIDS</b><br>
-		"If the trend in fossil fuel extraction continues over the next 28 years as it has over the previous 28, then global average temperatures would be on course to rise around 4ºC above preindustrial levels by the end of the century"
+		If we do nothing and allow the trend in fossil fuel extraction to continue as it is, global temperatures will rise to 4ºC above preindustrial levels by 2100." 
+		
 		<img class="supimg" src="https://fortunedotcom.files.wordpress.com/2017/02/gettyimages-482903304.jpg">
 	</div>
 	<div id="coal-highlight">
 		<b>COAL</b><br>
-		"This would entail substantial species extinction, large risks of regional and global food scarcity, and could cross multiple tipping points in the Earth’s climate system, leading to even more severe consequences"
+		A 4C rise would mean species extinction, food scarcity, and push Earth's climate past its tipping point.
+
 		<img class="supimg" src="http://upload.wikimedia.org/wikipedia/commons/b/b3/Strip_coal_mining.jpg">
 	</div>
 
