--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		}
 	</script>
 	<body>
+		<audio autoplay="autoplay" controls="controls">
+				<source src="./img/sound1.wav">
+		</audio>
+
 		<img id="bg1" src="./img/Untitled.gif">
 
 		<div class="home">
@@ -36,7 +40,5 @@
 
 	</body>
 
-	<audio autoplay="autoplay" controls="controls">
-		  <source src="./img/sound1.mp3">
-	</audio>
+
 </html>
