--- a/dys.html
+++ b/dys.html
@@ -15,18 +15,22 @@
 
 <script type="text/javascript">
   function popup() {
-    window.alert("Exxon Mobile, a top contributor to greenhouse gas emissions since 1988, has long has enjoyed a close relationship with Congress using their influence to run operations on federal land further destroying the environment. They made billions of dollars, but at what cost?")
+    window.alert("Exxon Mobile, a top contributor to greenhouse gas emissions since 1988, has long has enjoyed a close relationship with the US Congress using their influence to run operations on federal land, further destroying the environment. They made billions of dollars, but at what cost?");
   }
-  </script>
-
-	<script type="text/javascript">
+  
 	  function popup2() {
-	    window.alert("The oil industry knew about Climate Change since the 80s but companies like Exxon Mobile advocated for Climate Change deniers and continued to pollute the planet to the point of no return.")
+	    window.alert("Climate change was no new phenomenon in the 2000s. The oil industry knew about the poisonous effects of fossil fuels since the 1980s, but companies like Exxon Mobile continued to pollute the planet to the point of no return.");
+	  }
+
+	  function popup3() {
+	  	window.alert("Your friend Zen's dad is an executive at Exxon Mobile. His family is wealthy, and enjoys luxuries like a swimming pool in their back yard. Zen doesn't think climate change is real.")
 	  }
 	  </script>
 <a href="oil.html"><div class="next">NEXT</div></a>
 		<a href="extinct.html"><div class="back">BACK</div></a>
 <div id="pulse-a" class="pulse-ring" onclick="popup2()"></div>
+<div id="pulse-b" class="pulse-ring" onclick="popup3()"></div>
+
 
 <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
