--- a/extinct.html
+++ b/extinct.html
@@ -7,11 +7,13 @@
 		<script src="cc.js"></script>
 		<script type="text/javascript">
 			function reveal7() {
-  				window.alert("An MIT professor predicted that the sixth massive extinction of animals on planet Earth is set to begin by 2100. At this point in time, the threshold of carbon Earth can hold in its atmosphere and oceans has been crossed, and species that cannot adapt fast enough will die out.");
+  				window.alert("An MIT professor predicted that the sixth massive extinction of animals on planet Earth is set to begin by 2100.");
+  				window.alert("At this point in time, the threshold of carbon Earth can hold has been crossed, and species that cannot adapt fast enough will die out.");
 			}
 
 			function reveal8() {
-  				window.alert("Carbon emission, uncurbed by policy, tips us over the edge, but who knows how long we will fall. The sixth mass extinction could take thousands of years to play out. Which humans will make it through the end?");
+				window.alert("There are photos from your parents' childhood years of them at the zoo. When you went to see them yourself, they were already exitinct.");
+  				window.alert("The sixth mass extinction could take thousands of years to play out. Which humans will make it through the end?");
 			}
 
 		</script>
@@ -24,7 +26,7 @@
 		<audio loop controls autoplay>
 	<source src="./img/species.wav" type="audio/wav">
 </audio>
-
+		<a href="graph2.html"><img src="./img/usb.png" style="position:absolute; top:50%; left:80%; width:5%"></a>
 		<div onclick="reveal7()" id="pulse-7" class="pulse-ring"></div>
 		<div onclick="reveal8()" id="pulse-8" class="pulse-ring"></div>
 		<a href="dys.html"><div class="next">NEXT</div></a>
