--- a/graph1.html
+++ b/graph1.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<h2 style= "font-family:menlo">GHG emissions from Fossil Fuels, 1750-2015</h2> 
 		<link rel="stylesheet" href="cc.css"> 
 	</head>
+    <video autoplay muted loop id="myVideo">
+      <source src="./img/Fire.mp4" type="video/mp4">
+  </video>
 	<body id="graph1body">
+
+
 		<script type="text/javascript">
 			function revealGas() {
     			var x = document.getElementById("gas-highlight");
@@ -44,7 +48,11 @@
     			}
 			}
 		</script>
-	
+      <audio loop controls autoplay>
+    <source src="./img/fire.wav" type="audio/wav">
+    </audio>
+	   
+
 		<?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 22.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg id="graph1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -1807,23 +1815,27 @@
 </g>
 </svg>
 
+
+
+  <div style="position:absolute; top:20%; left:80%;">GAS</div>
+  <div style="position:absolute; top:45%; left:80%;">LIQUIDS</div>
+  <div style="position:absolute; top:70%; left:80%;">COAL</div>
+
 	<div id="gas-highlight">
-		<b>GAS</b> <br>
-		Fossil fuels are the largest source of man-made greenhouse gas emissions on Earth. 91% of GHG emissions in 2015 were from the fossil fuel industry.
-		<img class="supimg" src="https://www.elp.com/content/elp/en/articles/2017/12/state-board-approves-plans-for-natural-gas-plant-near-toledo/_jcr_content/leftcolumn/article/thumbnailimage.img.jpg">
+		
+		Fossil fuels are the largest source of man-made greenhouse gas emissions on Earth. 91% of greenhouse gas emissions in 2015 were from the fossil fuel industry.
+		
 	</div>
 	<div id="liquid-highlight">
-		<b>LIQUIDS</b><br>
-		If we do nothing and allow the trend in fossil fuel extraction to continue as it is, global temperatures will rise to 4ºC above preindustrial levels by 2100." 
+		If we do nothing and allow the trend in fossil fuel extraction to continue as it is, global temperatures will rise to 4ºC above preindustrial levels by 2100. 
 		
-		<img class="supimg" src="https://fortunedotcom.files.wordpress.com/2017/02/gettyimages-482903304.jpg">
 	</div>
 	<div id="coal-highlight">
-		<b>COAL</b><br>
-		A 4C rise would mean species extinction, food scarcity, and push Earth's climate past its tipping point.
+		A 4C rise would push Earth's climate past its tipping point.
 
-		<img class="supimg" src="http://upload.wikimedia.org/wikipedia/commons/b/b3/Strip_coal_mining.jpg">
 	</div>
+  <div style="font-family:menlo; position:absolute; font-size:1.5vw;top:5%; left:35%;">Pollution from Fossil Fuels, 1750-2015</div> 
+
 
 	<a href="wildfire.html"><div class="back">BACK</div></a>
 
