--- a/oil.html
+++ b/oil.html
@@ -19,19 +19,21 @@
 
 <script type="text/javascript">
   function popup2() {
-    window.alert("As oil spills continue to occur from corrupt oil companies, our oceans are becoming an unlivable environment due to increasing pollution. The Taylor Oil spill has been leaking since 2004 and no cleanup effort has been made.")
+    window.alert("Ocean levels rise, bringing rougher waves to the shoreline. Oil spills are more frequent now than ever. The Taylor Oil spill has been leaking since 2004, but the spill is impossible to stop. It will keep leaking.");
   }
   </script>
 
 	<script type="text/javascript">
 	  function popup() {
-	    window.alert("Levels of toxic arsenic in the ocean are also on the rise, creating a long-term threat to the marine ecosystem and killing aquatic animals ")
+	    window.alert("Levels of toxic arsenic in the ocean have made it almost unlivable, creating a long-term threat to the marine ecosystem and aquatic animals.");
 	  }
 	  </script>
 
 		<script type="text/javascript">
 		  function popup3() {
-		    window.alert("Oil spills continue to pollute our oceans...and companies are doing nothing to prevent or mitigate it.")
+		    window.alert("Pack up, your family is visiting your grandparents in Florida. You hate going to Florida. The beaches near your grandparents' house have long been closed to the public due to pollution from oil spills.");
+        window.alert("At night, lights from oil rigs blink on the horizon.");
+
 		  }
 		  </script>
 
