--- a/wildfire.html
+++ b/wildfire.html
@@ -7,11 +7,13 @@
 		<script src="cc.js"></script>
 		<script type="text/javascript">
 			function reveal4() {
-  				window.alert("High temperature increase in 2100 will increase the burn area of ecosystems in the west. The wildfire season will also last much longer than it does now in 2018. Wildfires will increase by 77% in 2100 if greenhouse gases continue to rise.");
+				window.alert("Your parents are on the phone with your aunt. She is preparing to evacuate her home in Southern California for the second time this year because of wildfire.")
+  				window.alert("High temperature increase in 2100 will increase the burn area of ecosystems in the west. The wildfire season will also last much longer than it does in 2018. If nothing is done, in 2100, wildfires will increase by 77%.");
 			}
 
 			function reveal5() {
-  				window.alert("In 2018, the Woolsey Fire burned away many well-known acres of Malibu. Wildfire touched Yosemite and forced park closure. By 2100, other national parks and significant areas in California and the west will be touched by wildfire. The fire on the screen could be blazing in Sequoia Natl. Park. Or Yellowstone. Or your future relatives' backyard.");
+				window.alert("Famous parks like Yosemite and Yellowstone have been closed due to wildfire damage for years. Many national monuments have been lost.")
+  				window.alert("The fire on the screen could be burning down redwoods in Sequoia Natl. Park right now. Or headed for your aunt's backyard.");
 			}
 
 		</script>
@@ -26,7 +28,7 @@
 
 		<div onclick="reveal4()" id="pulse-4" class="pulse-ring"></div>
 		<div onclick="reveal5()" id="pulse-5" class="pulse-ring"></div>
-		<a href="graph1.html"><div id="pulse-6" class="pulse-ring"></div></a>
+		<a href="graph1.html"><img src="./img/usb.png" style="position:absolute; top:20%; left:20%; width:5%"></a>
 		<a href="extinct.html"><div class="next">NEXT</div></a>
 		<a href="drought.html"><div class="back">BACK</div></a>
 	</body>
